# SimpleVLA-RL

./: .gitignore  .gitmodules  pyproject.toml
examples/: run_openvla_oft_rl_libero.sh
verl/utils/: openvla_utils.py
verl/utils/vla_utils/openvla/: modeling_prismatic.py  processing_prismatic.py
verl/utils/vla_utils/openvla_oft/: modeling_prismatic.py  processing_prismatic.py
verl/workers/: fsdp_workers.py
